--- a/Session_1/bai_16_styling_2/index.html
+++ b/Session_1/bai_16_styling_2/index.html
@@ -8,6 +8,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="./style.css">
   </head>
   <body>
     <div class="container">
@@ -114,6 +115,7 @@
         <h2>Styling</h2>
         <hr>
         <div>
+          <!-- Bai 15 style 1 -->
           <p :style="[styleForP, styleForText]">
             My content
           </p>
@@ -121,7 +123,13 @@
         <button class="btn btn-danger" @click="handleStyle">
           format
         </button>
-        
+        <!-- Bai 16 style 2 -->
+        <div>
+          <div class="app-cycle" :class="{ 'app-cycle--red': active }"></div>
+        </div>
+        <button class="btn btn-danger" @click="handleActive">
+          Active
+        </button>
       </section>
 
     </div>
